src/test/deca/context/invalid/return/this_used_as_rvalue_in_main.deca
// Description :
//    Utilisation de this comme rvalue dans le bloc principal.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

{
    int x = this;
}

